@@ -1,3 +1,7 @@
+2010-07-25  Mark Ellis <mark@mpellis.org.uk>
+
+	* src/odccm-device-manager.c - correct use of DBusError
+
 2009-01-10  Mark Ellis <mark@mpellis.org.uk>
 
 	* 0.13 release
